--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@
 label {
     font-weight: 700;
 }
+
+.back-texto {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    padding: 20px;
+}
